<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="wrap_content">


    <TextView
        android:text="@string/theFileWillBeSavedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtFolderName"
        android:text="abc/def"
        android:textColor="#a00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fileName" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnGenerate"
        android:text="@string/generate"
        android:background="#9a0"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>