<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="amarnehsoft.com.debits.fragments.listFragments.ListFragment">
    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@drawable/border2"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/orderbyTextView"
                android:text="@string/orderBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:id="@+id/orderbydateBtn"
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:id="@+id/orderbynameBtn"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:id="@+id/orderbypriceBtn"
                android:text="@string/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:id="@+id/moreBtn"
                android:text="..."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/datesearchLayout"
            android:padding="5dp"
            android:background="@drawable/border2"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/fromdateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="3dp"
                    android:background="@color/gary" />

                <TextView
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:id="@+id/fromdateTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/begining" />

                <Switch
                    android:id="@+id/fromdateSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="@color/gary" />
            <LinearLayout
                android:id="@+id/todateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gary"/>

                <TextView
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:id="@+id/todateTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/now" />
                <Switch
                    android:id="@+id/todateSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
                                            android:id="@+id/recyclerView"
                                            android:layout_height="match_parent"
                                            />
</LinearLayout>
