<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:id="@+id/coordinatorlayout"
    tools:context="amarnehsoft.com.debits.activities.entriesActivities.AddEditPeronActivity">
    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_person_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginStart="5dp"
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border2"
            android:hint="@string/personName"
            android:padding="10dp"
            android:singleLine="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_phone_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginStart="5dp"
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border2"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_mail_outline_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginStart="5dp"
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border2"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_location_on_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginStart="5dp"
            android:id="@+id/txtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border2"
            android:hint="@string/address"
            android:padding="10dp"
            android:singleLine="true" />
    </LinearLayout>


    <Button
        android:id="@+id/txtCat"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_layout2"
        android:text="@string/cat"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button android:layout_width="match_parent"
             android:layout_marginTop="10dp"
            android:id="@+id/btnSave"
            android:background="@drawable/button_layout1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/save"
            android:layout_height="wrap_content"/>

</LinearLayout>
