<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="8dp"
              android:id="@+id/mainView"
              android:background="@drawable/widget_border">

    <LinearLayout android:layout_width="0dp"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:layout_height="wrap_content">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content">

            <TextView
                android:text="@string/debits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/txtDebits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>


        <LinearLayout android:layout_width="match_parent"
                      android:layout_marginTop="10dp"
                      android:layout_height="wrap_content">

            <TextView
                android:text="@string/payments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/txtPayments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content"
                  android:text="@string/balance"
                  android:textStyle="bold"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:id="@+id/txtBalance"
                  android:textStyle="bold|italic"
                  android:textSize="25sp"
                  android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>